--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,14 @@
 .slick-arrow {
     opacity: 0;
+    position: absolute;
+}
+
+/* .slick-list .draggable {
+    display: flex !important;
+} */
+
+.slick-list .draggable{
+    display: flex !important;
 }
 
 .RE_banner_new {
@@ -385,7 +394,7 @@
 .welcome_section1 .editor_choice .editor_list .title {
     width: calc(100% - 20px);
     max-height: 42px;
-    margin: 4px 10px 8px 10px;
+    margin: 4px 10px 8px 0px;
     font-size: 15px;
     font-weight: bold;
     overflow: hidden;
@@ -410,10 +419,6 @@
     width: 685px;
 }
 
-
-.welcome_section1 .editor_choice .editor_list .swiper_wrapper .swiper_item{
-    width: 25%;
-}
 
 
 .welcome_section1 .editor_choice .editor_btn button ~ button {
@@ -520,7 +525,7 @@
 
 .welcome_section1 .editor_choice .editor_list .sub {
     max-height: 36px;
-    margin: 0 10px;
+    margin: 0 5px;
     font-size: 13px;
     letter-spacing: -0.8px;
     overflow: hidden;
