--- a/css/main.css
+++ b/css/main.css
@@ -1237,13 +1237,9 @@
 
 /* -------------------------알라디너의 선택------------------------ */
 
-.swiper_item {
-    width: 182px;
-    /* margin-right: 30px; */
-}
 
 .w_booklist .cover img {
-    width: 170px;
+    width: 100%;
     border: 1px #e2e2e2 solid;
 }
 
@@ -1281,6 +1277,7 @@
     -webkit-box-orient: vertical;
     overflow: hidden;
 }
+
 /* -------------------------알라딘 오디오북------------------------ */
 
 .w_booklist .cover .audiobook_icon {
