--- a/css/main.css
+++ b/css/main.css
@@ -315,7 +315,7 @@
     margin-left: auto;
     margin-right: auto;
     position: relative;
-    /* overflow: hidden; ----------------------------------------------------------------------------------------임시 속성*/
+    overflow: hidden;
     list-style: none;
     z-index: 1;
 }
