--- a/css/main.css
+++ b/css/main.css
@@ -811,9 +811,9 @@
 .wide_banner .swiper-pagination {
     color: #737373;
     font-size: 12px;
-    right: 35rem;
-    top:2rem;
-    padding: 8px 15px 0 0;
+    right: 0rem;
+    top: 2rem;
+    padding: 8px 3rem 0 0;
     position: absolute;
     z-index: 10;
 }
