Updated hover css

--- a/css/main.css
+++ b/css/main.css
@@ -129,6 +129,10 @@
     font-size: 13px;
 }
 
+#head_layer_menu a:hover, .category a:hover {
+    text-decoration: underline;
+}
+
 .hdm {
     padding: 9px;
     /* display: none; */
