--- a/css/common.css
+++ b/css/common.css
@@ -23,6 +23,7 @@ div {
 
 a {
     text-decoration: none;
+    color: #444444;
 }
 
 ul, li {
@@ -38,6 +39,12 @@ ul, li {
 
 .opacity_on {
     opacity: 1;
+}
+
+.clear {
+    clear: both;
+    margin: 0px;
+    padding: 0px;
 }
 
 .active {
@@ -58,6 +65,16 @@ ul, li {
 
 .bold {
     font-weight: bold;
+}
+
+.temp_H10 {
+    margin: 0;
+    padding: 0;
+    height: 10px;
+}
+
+.temp_PR10 {
+    padding-right: 10px;
 }
 
 .inner, .gnb, .util {
@@ -477,7 +494,6 @@ ul, li {
     right: -85px;
     top: 0;;
 }
-
 
 
 .floating_bn_box .right_bn a {
