--- a/css/sub.css
+++ b/css/sub.css
@@ -1,3 +1,77 @@
 .sub_wrap {
-    
+    width: 1060px;
+    margin: 0 auto;
+    padding: 0;
+    position: relative;
+}
+
+.top_title_wrap {
+    margin: 0;
+    padding: 0;
+    line-height: 1.4;
+}
+
+.top_title_wrap a:hover {
+    text-decoration: underline;
+}
+
+.top_title_wrap .left {
+    width: 740px;
+    float: left;
+    text-align: left;
+}
+
+
+.top_title_wrap .left .tlist li {
+    list-style: none;
+    padding-bottom: 12px;
+}
+
+.top_title_wrap .right {
+    width: 60px;
+    float: right;
+    text-align: right;
+    padding-top: 10px;
+}
+
+.top_main_title{
+    font-size: 26px;
+    font-family: "Noto Sans KR",Malgun Gothic,'Segoe WPC', 'Segoe UI', 'Apple SD Gothic Neo', Helvetica, AppleGothic, Sans-serif;
+    color: #222;
+    text-decoration: none;
+    line-height: 1.5;
+    letter-spacing: -0.05em;
+    font-weight: 600;
+}
+
+.top_sub1_title {
+    font-size: 15px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    color: #222;
+    text-decoration: none;
+    line-height: 1.4;
+    letter-spacing: -0.02em;
+}
+
+.top_sub2_title {
+    font-size: 14px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    color: #444;
+    text-decoration: none;
+}
+
+.label_wrap span {
+    display: inline-block;
+    background: #ffffff;
+    border-radius: 3px;
+    padding: 0 8px;
+    height: 20px;
+    line-height: 20px;
+    text-align: center;
+    font-size: 11px;
+    color: #555;
+    margin-right: 5px;
+    letter-spacing: -0.04em;
+    font-family: Malgun Gothic,'Segoe WPC', 'Segoe UI', 'Apple SD Gothic Neo', Helvetica, AppleGothic, Sans-serif;
+    border: 1px solid #e5e5e5;
 }
