--- a/css/sub.css
+++ b/css/sub.css
@@ -81,6 +81,116 @@
 
 /* -----------------------------도서커버----------------------------- */
 
+
+/* 도서커버 섹션 컨테이너 */
+.book_wrap {
+    width: 1060px;
+    margin: 0 auto;
+    padding: 0;
+    position: relative;
+}
+
+.Bcoverwrap {
+    margin: 0;
+    padding: 0;
+    float: left;
+    width: 500px;
+}
+
+.Bcoverwrap .cover {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    float: left;
+    width: 502px;
+    text-align: center;
+}
+
+.Bcoverwrap .arr2_left {
+    position: absolute;
+    z-index: 10;
+    opacity: 0;
+    width: 25%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    cursor: pointer;
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opactiy 1s ease-in-out;
+    -ms-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
+}
+
+.arr2_left.new span {
+    background: url(https://image.aladin.co.kr/img/welcome/arrow-left-white.svg) rgba(58, 58, 58, 0.4) no-repeat center / 15px auto;
+    left: 5px;
+}
+
+.Bcoverwrap .arr2_right {
+    position: absolute;
+    z-index: 10;
+    opacity: 0;
+    width: 25%;
+    height: 100%;
+    top: 0;
+    left: 75%;
+    cursor: pointer;
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opactiy 1s ease-in-out;
+    -ms-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
+}
+
+.arr2_right.new span {
+    background: url(https://image.aladin.co.kr/img/welcome/arrow-right-white.svg) rgba(58, 58, 58, 0.4) no-repeat center / 15px auto;
+    right: 5px;
+}
+
+.leftarrow2.new span, .arr2_right.new span {
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 1px;
+    color: transparent;
+    text-indent: -100rem;
+}
+
 .c_back, .c_left {
     overflow: hidden;
+}
+
+.coverItem.default .c_front::after, .coverItem.bk-viewback .c_back::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    box-shadow: inset 0px 0px 12px 3px rgba(0, 0, 0, 0.05);
+}
+
+.book li .coverItem {
+    cursor: url(https://image.aladin.co.kr/img/shop/mousecursor2.png), pointer !important;
+    position: absolute;
+    width: 100%;
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    -webkit-transition: -webkit-transform .5s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+    -moz-transition: -moz-transform .5s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+    transition: transform .5s cubic-bezier(0.45, 0.05, 0.55, 0.95);
+}
+
+.Bcoverwrap .cover img {
+    max-width: 500px;
+}
+
+.swiper_sectionr .book .imgbox {
+    border: 1px solid #ddd;
 }
