--- a/css/common.css
+++ b/css/common.css
@@ -41,6 +41,14 @@ ul, li {
     opacity: 1;
 }
 
+.floatL{
+    float: left;
+}
+
+.marginL4 {
+    margin-left: 4px;
+}
+
 .clear {
     clear: both;
 }
