Updated sub.html 첫번째 탭

--- a/css/common.css
+++ b/css/common.css
@@ -132,6 +132,10 @@ ul, li {
     line-height: 1.8;
 }
 
+.grey2 {
+    color: #222;
+}
+
 .inner, .gnb, .util {
     display: flex;
     justify-content: space-between;
