--- a/css/sub.css
+++ b/css/sub.css
@@ -594,3 +594,12 @@
     margin: 0;
     padding: 16px 29px 16px 29px;
 }
+
+/* ---------------------중고로 팔기 섹션 ---------------------*/
+
+.Binfowrap .info_list3 ul li {
+    list-style: none;
+    padding: 0 2% 0 0;
+    margin: 0;
+    float: left;
+}
