--- a/css/sub.css
+++ b/css/sub.css
@@ -231,7 +231,7 @@
 #divFlipImg section {
     width: 100%;
     height: 100%;
-    margin: 100px auto;
+    /* margin: 100px auto; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -303,7 +303,7 @@
 /* ---------------도서 정보 //우측 상단---------------------- */
 
 .Binfowrap {
-    /* margin: 0 0 0 60px; -----------------------------temp*/
+    margin: 0 0 0 56px;
     padding: 0;
     float: left;
     width: 500px;
