--- a/css/sub.css
+++ b/css/sub.css
@@ -811,3 +811,9 @@
     letter-spacing: -0.02em;
 }
 
+/* ------------------------------이벤트 섹션------------------------------ */
+
+#sub_event .swiper_item a img {
+    width: 266px;
+    padding: 0 6px 0 0;
+}
