--- a/css/sub.css
+++ b/css/sub.css
@@ -817,3 +817,29 @@
     width: 266px;
     padding: 0 6px 0 0;
 }
+
+#sub_event .event_title {
+    margin: 0;
+    padding: 5px;
+    text-align: left;
+    color: #333;
+    font-size: 15px;
+    line-height: 1.5;
+}
+
+/* 슬라이더 dot속성 */
+.dots_custom button{
+    width: 15px;
+    height: 15px;
+    margin: 0 3px;
+    display: inline-block;
+    border-radius: 50%;
+    background: #000;
+    opacity: 0.2;
+    border: none;
+    font-size: 0; 
+}
+
+.dots_custom li.slick-active button {
+    opacity: 1;
+}
