--- a/css/sub.css
+++ b/css/sub.css
@@ -692,7 +692,7 @@
     position: absolute;
     left: 0;
     margin: 0;
-    /* padding: 5px 100px 0 0; */
+    padding: 10px 0 0 0;
     width: 150px;
     font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
     color: #222;
@@ -933,4 +933,252 @@
     transition: color ease-out .2s,-webkit-transform ease-out .2s;
     transition: color ease-out .2s,transform ease-out .2s;
     transition: color ease-out .2s,transform ease-out .2s,-webkit-transform ease-out .2s;
+}
+
+/* ----------------------추천글 섹션---------------------- */
+
+.info_list7 ul li {
+    list-style: none;
+    background: url(//image.aladin.co.kr/img/shop/2018/icon_dot1.png) no-repeat 0 9px;
+    margin: 0;
+    padding: 0 0 10px 9px;
+    color: #333;
+    letter-spacing: -0.02em;
+}
+
+#sub_Bauthor .author_box .pic img {
+    width: 140px;
+}
+
+.info_list2 ul li {
+    list-style: none;
+    background: url(https://image.aladin.co.kr/img/shop/2018/icon_dot1.png) no-repeat 0 9px;
+    margin: 0;
+    padding: 0 0 6px 10px;
+    color: #333;
+    letter-spacing: -0.02em;
+}
+
+#sub_Bauthor .author_box .intro {
+    float: left;
+    width: 650px;
+    margin: 0 0 0 20px;
+    word-break: break-all;
+}
+
+#sub_Bauthor .author_box .pic {
+    width: 140px;
+    float: left;
+    margin: 0;
+    padding: 0;
+}
+
+#sub_Bauthor .author_box .introduction_nopic {
+    width: 810px;
+    word-break: break-all;
+}
+
+#sub_Bauthor .author_box .intro span a:hover {
+    text-decoration: underline;
+}
+
+/* --------------------------북플 섹션-------------------------- */
+
+#sub_Bookple .mid_BlogLL {
+    color: #0086cd;
+    position: absolute;
+    left: 2px;
+    margin: 0;
+    width: 150px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    font-size: 21px;
+    line-height: 1.6;
+    text-align: left;
+    letter-spacing: -0.02em;
+}
+
+
+.Bookple_box2 .BP_conts {
+    float: left;
+    margin: 0 0;
+    padding: 0px;
+    font-size: 15px;
+    font-weight: 600;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    color: #333;
+}
+
+.Bookple_box2 .BP_title {
+    width: 120px;
+    float: right;
+    margin: 0;
+    padding: 0;
+}
+
+.blog_list2 ul li {
+    list-style: none;
+    margin: 0;
+    padding: 0 0 3px 0px;
+    line-height: 1.8;
+    color: #333;
+    letter-spacing: -0.02em;
+}
+
+.btn_blog_write {
+    display: inline-block;
+    padding: 2px 18px 6px 19px;
+    vertical-align: middle;
+    text-align: center;
+    overflow: hidden;
+    text-decoration: none;
+    cursor: pointer;
+    background: #0fa8ff;
+    border: 1px solid #0fa8ff;
+}
+
+
+.btn_blog_write:hover {
+    color: #0fa8ff;
+}
+
+.btn_blog_write a {
+    background: #0fa8ff;
+    text-decoration: none;
+    outline: 0;
+    color: #fff;
+    font-size: 13px;
+    font-weight: bold;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    display: block;
+    white-space: nowrap;
+    margin: 0;
+}
+
+.blog_list1 ul li {
+    list-style: none;
+    padding: 0 25px 0 0;
+    margin: 0;
+    float: left;
+    line-height: 1.8;
+    color: #333;
+    letter-spacing: -0.02em;
+}
+
+/* ------------------------------그래프 섹션------------------------------ */
+.graph_wrap {
+    margin: 0 auto;
+    padding: 40px 0;
+    background: #f9f9f9;
+}
+
+.graph_L {
+    width: 519px;
+    float: left;
+    margin: 0;
+    padding: 0 10px 0 0;
+    border-bottom: 0;
+    border-right: 1px dotted #ccc;
+}
+
+
+.graph_R {
+    width: 520px;
+    float: left;
+    margin: 0;
+    padding: 0 0 0 10px;
+}
+
+.graph_wrap .graph_titleL {
+    display: block;
+    margin: 0 30px 0 0;
+    text-align: center;
+    font-size: 19px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    color: #0086cd;
+    line-height: 1.4;
+}
+
+.analysis .analysis_box .tb_woman {
+    background: url(https://image.aladin.co.kr/img/shop/2018/analysis_box_bg1.png) repeat-x 0 0;
+    text-align: right;
+    padding: 8px 0;
+    width: 45%;
+    font-size: 15px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+}
+
+.analysis .analysis_box .tb_woman .bar {
+    float: right;
+}
+
+.analysis .analysis_box .tb_woman .per {
+    background: #f9f9f9;
+    padding-bottom: 2px;
+    width: 18%;
+    float: left;
+    padding-right: 5px;
+    font-size: 15px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    font-style: italic;
+    color: #000;
+    letter-spacing: -0.05em;
+}
+
+.analysis_box .tb_woman_last {
+    text-align: right;
+    padding: 8px 0;
+    width: 45%;
+    font-size: 15px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+}
+
+.analysis_box .tb_man_last {
+    text-align: left;
+    padding: 8px 0;
+    width: 45%;
+    font-size: 15px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+}
+
+.analysis_box .tb_woman .bar img, .analysis_box .tb_man .bar img {
+    width: 100%;
+    height: 20px;
+}
+
+.analysis .analysis_box .tb_man {
+    background: url(https://image.aladin.co.kr/img/shop/2018/analysis_box_bg1.png) repeat-x 0 0;
+    text-align: left;
+    padding: 8px 0;
+    width: 45%;
+    font-size: 15px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+}
+
+.analysis .analysis_box .tb_man .bar {
+    float: left;
+}
+
+.analysis .analysis_box .tb_man .per{
+    background: #f9f9f9;
+    padding-bottom: 2px;
+    width: 18%;
+    float: right;
+    padding-left: 5px;
+    font-size: 15px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    font-style: italic;
+    color: #000;
+    letter-spacing: -0.05em;
+    text-align: right;
+}
+
+.analysis_box .tb_title {
+    text-align: center;
+    width: 10%;
+    padding: 3px 0 5px 0;
+    font-size: 15px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    color: #333;
+    font-weight: 600;
+    letter-spacing: -0.05em;
 }
