--- a/css/sub.css
+++ b/css/sub.css
@@ -1071,6 +1071,12 @@
     background: #f9f9f9;
 }
 
+.graph_wrap .graph_title {
+    margin: 0 0 30px 0;
+    padding: 0;
+    width: 519px;
+}
+
 .graph_L {
     width: 519px;
     float: left;
@@ -1181,4 +1187,79 @@
     color: #333;
     font-weight: 600;
     letter-spacing: -0.05em;
+}
+
+/* 평점 분포 */
+
+.star_box {
+    display: inline-block;
+    margin: 0 auto 15px auto;
+    padding: 0;
+    text-align: center;
+}
+
+.star_box .graph_title {
+    margin: 0 0 20px 0;
+    padding: 0;
+    width: 519px;
+}
+
+.star_box .star {
+    float: left;
+    padding: 7px 0 0 15px;
+    color: #ef3b96;
+    font-weight: bold;
+    font-size: 34px;
+}
+
+.analysis_box .num {
+    float: left;
+    padding: 15px 0 0 15px;
+    color: #ef3b96;
+    font-weight: bold;
+    font-size: 34px;
+}
+
+.analysis_box .star_list {
+    float: left;
+    margin: 0;
+    padding: 0 0 0 0;
+    width: 100%;
+    font-size: 13px;
+    text-align: center;
+}
+
+.analysis_box .star_list .tb_right .per {
+    background: #f9f9f9;
+    padding-bottom: 2px;
+    width: 15%;
+    float: right;
+    font-size: 14px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    font-style: italic;
+    color: #111;
+    padding-left: 5px;
+    text-align: right;
+}
+
+.analysis_box .star_list .tb_left {
+    text-align: left;
+    width: 130px;
+    padding: 6px 0;
+}
+
+
+.analysis_box .star_list .tb_right {
+    background: url(https://image.aladin.co.kr/img/shop/2018/analysis_box_bg1.png) repeat-x 0 0;
+    text-align: left;
+    padding: 8px 0;
+}
+
+.analysis_box .star_list .tb_right .bar {
+    float: left;
+}
+
+.analysis_box .star_list .tb_right .bar img {
+    width: 100%;
+    height: 20px;
 }
