--- a/css/sub.css
+++ b/css/sub.css
@@ -984,7 +984,7 @@
 
 /* --------------------------북플 섹션-------------------------- */
 
-#sub_Bookple .mid_BlogLL {
+.mid_BlogLL {
     color: #0086cd;
     position: absolute;
     left: 2px;
@@ -1262,4 +1262,71 @@
 .analysis_box .star_list .tb_right .bar img {
     width: 100%;
     height: 20px;
+}
+
+/*-------------------------------- 100자평 등록하기-------------------------- */
+
+.hundred_box .text_box {
+    border: 1px solid #d5d5d5;
+    margin: 0;
+    padding: 0px;
+    width: 708px;
+    height: 65px;
+}
+
+.hundred_box .text_box .Btext_area {
+    border: 0;
+    padding: 10px 10px;
+    width: 685px;
+    height: 45px;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    font-size: 14px;
+    color: #777;
+    text-align: left;
+    letter-spacing: -0.02em;
+    line-height: 1.6;
+}
+
+.hundred_box .Hleft1 {
+    margin: 0 5px 0 0;
+    padding: 0;
+    width: 710px;
+    float: left;
+    height: 100%;
+}
+
+.hundred_box .Hright1 {
+    float: right;
+    margin: 0;
+    padding: 0px;
+    width: 95px;
+    height: 100%;
+}
+
+.btn_register {
+    display: inline-block;
+    padding: 0;
+    vertical-align: middle;
+    text-align: center;
+    overflow: hidden;
+    text-decoration: none;
+    cursor: pointer;
+    background: #0fa8ff;
+}
+
+.btn_register a {
+    white-space: nowrap;
+    text-decoration: none;
+    outline: 0;
+    color: #FFF;
+    font-size: 15px;
+    font-weight: bold;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    line-height: 1.5;
+    display: block;
+    white-space: nowrap;
+    background: #0fa8ff;
+    margin: 0;
+    width: 95px;
+    padding: 23px 0px 22px 0px;
 }
