--- a/css/common.css
+++ b/css/common.css
@@ -72,11 +72,11 @@ ul, li {
 }
 
 
-.floatL{
+.floatL , .left{
     float: left;
 }
 
-.floatR {
+.floatR , .right{
     float: right;
 }
 
@@ -114,6 +114,12 @@ ul, li {
     margin: 0;
     padding: 0;
     height: 30px;
+}
+
+.temp_H40 {
+    margin: 0;
+    padding: 0;
+    height: 40px;
 }
 
 .temp_H50 {
@@ -157,6 +163,14 @@ ul, li {
     text-decoration: none;
     line-height: 1.5;
 }
+
+
+.font_blue {
+    color: #0fa8ff;
+    text-decoration: none;
+    line-height: 1.5;
+}
+
 
 .font_str {
     font-weight: 600;
@@ -235,6 +249,42 @@ ul, li {
     cursor: pointer;
     background: #ffffff;
     border: 1px solid #c8c8c8;
+}
+
+.btn_qna {
+
+}
+.btn_blog_sym {
+    display: inline-block;
+    padding: 0;
+    vertical-align: middle;
+    text-align: center;
+    overflow: hidden;
+    text-decoration: none;
+    cursor: pointer;
+    background: #fcfcfc;
+    border: 1px solid #e5e5e5;
+}
+
+.btn_blog_sym a{
+    white-space: nowrap;
+    text-decoration: none;
+    outline: 0;
+    color: #777;
+    font-size: 13px;
+    font-weight: bold;
+    font-family: malgun, "Malgun Gothic", Dotum, 돋움, sans-serif;
+    line-height: 150%;
+    display: block;
+    white-space: nowrap;
+    margin: 0;
+    padding: 2px 8px 4px 8px;
+}
+
+.btn_blog_sym a:hover {
+    margin: 0;
+    text-decoration: none;
+    background: #f5f5f5;
 }
 
 .inner, .gnb, .util {
