--- a/css/common.css
+++ b/css/common.css
@@ -158,6 +158,12 @@ ul, li {
     border-top: 1px solid #d5d5d5;
 }
 
+.temp_line3 {
+    margin: 0;
+    padding: 0;
+    border-top: 1px solid #cccccc;
+}
+
 .font_pink {
     color: #eb217c;
     text-decoration: none;
