--- a/css/sub.css
+++ b/css/sub.css
@@ -1018,6 +1018,8 @@
     line-height: 1.6;
     text-align: left;
     letter-spacing: -0.02em;
+
+    padding-top: 7px;
 }
 
 
@@ -1442,7 +1444,6 @@
     color: #333;
     letter-spacing: -0.02em;
 }
-
 
 
 .hundred_list .HL_write {
