--- a/css/sub.css
+++ b/css/sub.css
@@ -1529,6 +1529,41 @@
     height: 321px;
     overflow: hidden;
 }
-/* 
-#last_bookwrap .slick-slide {
-} */
+
+
+/* 오늘 본 도서 목록 리스트 */
+
+.fiximg1 {
+    width: 50px;
+    height: 65px;
+}
+
+.today_click_r {
+    float: right;
+    margin-top: 22px;
+    width: 100px;
+}
+
+
+.today_click_L {
+    float: left;
+    padding-left: 20px;
+}
+
+.today_click_L li {
+    float: left;
+    display: inline;
+    padding: 0 9px;
+    position: relative;
+}
+
+.today_click_r a::after {
+    content: '';
+    display: inline-block;
+    width: 13px;
+    height: 13px;
+    background: url(../img/icon_next_gray.png) no-repeat center;
+    vertical-align: middle;
+    margin-top: -4px;
+    opacity: 0.7;
+}
