--- a/css/common.css
+++ b/css/common.css
@@ -244,6 +244,22 @@ ul, li {
     color: #999;
 }
 
+.border_top {
+    border-top: 1px solid #dfdfdf;
+}
+
+.border_bottom {
+    border-bottom: 1px solid #dfdfdf;
+}
+
+.border_topC {
+    border-top: 1px solid #ccc;
+}
+
+.border_bottomC {
+    border-bottom: 1px solid #ccc;
+}
+
 .btn_check {
     display: inline-block;
 
